--- a/salvus/static/policies/pricing.html
+++ b/salvus/static/policies/pricing.html
@@ -46,11 +46,11 @@
                     <br>
                     <div class="row">
                         <div class="col-md-5">
-                            SMC grows with you! The following upgrades allow you to increase the
+                            SMC grows with you! The following upgrade allow you to increase the
                             <em><strong>storage space</strong></em> for your files, the <em><strong>computational power and memory</strong></em> for
                             your calculations, give your project
                             <em><strong>network access</strong></em>,
-                            and let <strong><em>remove restrictions</em></strong> on non-commercial/non-academic use.
+                            and <strong><em>remove restrictions</em></strong> on non-commercial/non-academic use.
                         </div>
                         <div class="col-md-5 col-sm-offset-2">
                             By upgrading one of your projects to a paid monthly plan, your files
@@ -74,131 +74,73 @@
 
                             <table class="table table-bordered table-hover">
                                 <tr>
-                                    <th style="width:10em">Plan type</th>
+                                    <th>Price</th>
+                                    <th style="width:10em">Project type</th>
                                     <th>Commercial use<sup>1</sup></th>
                                     <th>Network access<sup>2</sup></th>
                                     <th>Idle timeout<sup>3</sup></th>
                                     <th>Disk space<sup>4</sup></th>
-                                    <th>Shared CPU's<sup>5</sup></th>
+                                    <th>CPU<sup>5</sup></th>
                                     <th>Memory<sup>6</sup></th>
-                                    <th>Backup interval<sup>7</sup></th>
-                                    <th>Price per month<sup>8</sup></th>
+                                    <th class="hide">Backup interval<sup>7</sup></th>
+                                </tr>
+                                <tr>
+                                    <td colspan=9>
+                                    </td>
+                                </tr>
+                                <tr class="success">
+                                    <td colspan=9>
+                                        A <strong>standard</strong>
+                                        project runs
+                                        <em><strong>much more quickly</strong></em>,
+                                        and you may use it
+                                        commercially.
+                                    </td>
+                                </tr>
+                                <tr class="success">
+                                    <td style="padding-top: 0px;"><font size=5><strong>$10/month</strong></font></td>
+                                    <td>standard-1</td>
+                                    <td>Yes</td>
+                                    <td>Yes</td>
+                                    <td>1 day</td>
+                                    <td>5GB SSD</td>
+                                    <td>1 Intel Xeon</td>
+                                    <td>2GB RAM</td>
+                                    <td class="hide">10 minutes</td>
+                                </tr>
+                                <tr>
+                                    <td colspan=9>
+                                    </td>
                                 </tr>
                                 <tr class="warning">
                                     <td colspan=9>
-                                        This <strong>free-1 plan</strong> is the default. You can evaluate the service and use it for
-academic and non-commercial purposes only.</td>
+                                        A <strong>free</strong> project lets you evaluate the service and use it for academic or non-commercial purposes.</td>
                                 </tr>
                                 <tr class="warning">
+                                    <td  style="padding-top: 0px;"><font size=5><strong>$0/month</strong></font></td>
                                     <td>free-1</td>
                                     <td>No</td>
                                     <td>No</td>
                                     <td>1 hour</td>
-                                    <td>2GB</td>
+                                    <td>2GB SSD</td>
                                     <td>1 Opteron</td>
-                                    <td>2GB RAM shared</td>
-                                    <td>15 minutes</td>
-                                    <td>$0</td>
-                                </tr>
-                                <tr class="success">
-                                    <td colspan=9>
-                                        The <strong>shared</strong>
-                                        plans allow you to move
-                                        some of your projects
-                                        to  less
-                                        crowded faster machines.
-                                    </td>
-                                </tr>
-                                <tr class="success">
-                                    <td>shared-1</td>
-                                    <td>Yes</td>
-                                    <td>Yes</td>
-                                    <td>1 day</td>
-                                    <td>5GB</td>
-                                    <td>1 Intel</td>
-                                    <td>2GB RAM shared</td>
-                                    <td>10 minutes</td>
-                                    <td>$15</td>
-                                </tr>
-                                <tr class="success hide">
-                                    <td>shared-2</td>
-                                    <td>Yes</td>
-                                    <td>Yes</td>
-                                    <td>2 days</td>
-                                    <td>10GB</td>
-                                    <td>2 Intel</td>
-                                    <td>4GB RAM shared</td>
-                                    <td>7 minutes</td>
-                                    <td>$20</td>
-                                </tr>
-                                <tr class="success hide ">
-                                    <td>shared-3</td>
-                                    <td>Yes</td>
-                                    <td>Yes</td>
-                                    <td>1 week</td>
-                                    <td>20GB</td>
-                                    <td>3 Intel</td>
-                                    <td>6GB RAM shared</td>
-                                    <td>5 minutes</td>
-                                    <td>$35</td>
-                                </tr>
-                                <tr class="success hide">
-                                    <td>shared-4</td>
-                                    <td>Yes</td>
-                                    <td>Yes</td>
-                                    <td>1 month</td>
-                                    <td>50GB</td>
-                                    <td>4 Intel</td>
-                                    <td>8GB RAM shared</td>
-                                    <td>5 minutes</td>
-                                    <td>$55</td>
+                                    <td>2GB RAM</td>
+                                    <td class="hide">10 minutes</td>
                                 </tr>
                                 <tr class="info hide">
                                     <td colspan=9>
-                                        The <strong>dedicated</strong>
-                                        plans allow you to run  any
+                                        A <strong>dedicated</strong>
+                                        project allow you to run  any
                                         number of your projects
                                         on a machine dedicated only
                                         to them.
                                     </td>
                                 </tr>
-                                <tr class="info hide">
-                                    <td>dedicated-1</td>
-                                    <td>Yes</td>
-                                    <td>Yes</td>
-                                    <td>infinite</td>
-                                    <td>20GB</td>
-                                    <td>1 dedicated Intel CPU</td>
-                                    <td>3.75GB dedicated</td>
-                                    <td>5 minutes</td>
-                                    <td>$64</td>
-                                </tr>
-                                <tr class="info hide">
-                                    <td>dedicated-2</td>
-                                    <td>Yes</td>
-                                    <td>Yes</td>
-                                    <td>infinite</td>
-                                    <td>50GB</td>
-                                    <td>2 dedicated Intel CPU</td>
-                                    <td>13GB dedicated</td>
-                                    <td>5 minutes</td>
-                                    <td>$150</td>
-                                </tr>
-                                <tr class="info hide">
-                                    <td>dedicated-3</td>
-                                    <td>Yes</td>
-                                    <td>Yes</td>
-                                    <td>infinite</td>
-                                    <td>200GB</td>
-                                    <td>4 dedicated Intel CPU</td>
-                                    <td>26GB dedicated</td>
-                                    <td>5 minutes</td>
-                                    <td>$300</td>
-                                </tr>
+
                             </table>
 
 
-                            <ol>
+                            <ol style="color: #444;">
                                 <li><strong>Commercial use:</strong> free-1 projects may only be used for academic and non-commercial use.</li>
 
                                 <li><strong>Network access:</strong>
@@ -223,12 +165,10 @@ academic and non-commercial purposes only.</td>
                                     with other users, so you are not guaranteed to always get the full amount
                                     of memory.
                                 </li>
-                                <li><b>Backups:</b>
+                                <li  class="hide"><b>Backups:</b>
                                     Browsable snapshots of all files in your project are saved periodically.
                                 </li>
-                                <li><b>Price per month:</b>
-                                    Prices are not prorated.  If you sign up you will be charged for a complete month.
-                                </li>
+
                             </ol>
                         </div>
 
