--- a/salvus/static/policies/pricing.html
+++ b/salvus/static/policies/pricing.html
@@ -114,7 +114,8 @@
                                 </tr>
                                 <tr class="warning">
                                     <td colspan=9>
-                                        A <strong>free</strong> project lets you evaluate the service and use it for academic or non-commercial purposes.</td>
+                                        A <strong>free</strong> project lets you evaluate the service and use
+                                        it for academic or non-commercial purposes.</td>
                                 </tr>
                                 <tr class="warning">
                                     <td  style="padding-top: 0px;"><font size=5><strong>$0/month</strong></font></td>
@@ -122,7 +123,7 @@
                                     <td>No</td>
                                     <td>No</td>
                                     <td>1 hour</td>
-                                    <td>2GB SSD</td>
+                                    <td>3GB SSD</td>
                                     <td>1 Opteron</td>
                                     <td>2GB RAM</td>
                                     <td class="hide">10 minutes</td>
